feat: add aside section

--- a/index.html
+++ b/index.html
@@ -51,10 +51,32 @@
       </section>
     </main>
     <aside>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
+      <section>
+        <h3>Contact</h3>
+        <ul>
+          <li>facebook.com/andrzejkarabash</li>
+          <li>andrzej.karabasz@gmail.com</li>
+          <li>+48 731 379 914</li>
+          <li>@frissonar</li>
+        </ul>
+      </section>
+      <section>
+        <h3>Skills</h3>
+        <ul>
+          <li>HTML, CSS</li>
+          <li>JavaScript Basics</li>
+          <li>GIT, GitHub</li>
+          <li>VScode</li>
+        </ul>
+      </section>
+      <section>
+        <h3>Languages</h3>
+        <ul>
+          <li>English - C1</li>
+          <li>Russian - Native</li>
+          <li>Polish - C2</li>
+        </ul>
+      </section>
     </aside>
     <footer></footer>
   </body>
