feat: add footer section

--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
         </ul>
       </section>
     </aside>
-    <footer></footer>
+    <footer>
+      <img src="GitHub-Mark/PNG/GitHub-Mark-32px.png" alt="GitHub Icon">
+      <p>My GitHub</p>
+      <img src="rs_school_js.svg" alt="RSSchool Icon">
+    </footer>
   </body>
 </html>
