feat: add photo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <header>
+      <img src="Me.jpg" alt="Photo of me"> 
       <h1>Andrei Karabash</h1>
       <h2>Frontend Developer</h2>
     </header>
